clang/test/BSC/Positive/Generic/Typealias/conditional_struct/conditional_struct.cbs
// RUN: %clang %s -g -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %S/../../../../../../lib/Headers/bsc_include/bsc_conditional.hbs -o %T/bsc_conditional.h
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

#include "bsc_conditional.hbs"
struct S {
    int x;
};

constexpr int g_a = 0;

int foo(int a) {
    conditional<g_a, struct S, int> b = a;
    return b;
}

int main() {
    int a = {1};
    int b = foo(a);
    if (a == b) {
        return 0;
    }
    return 1;
}