clang/test/BSC/Negative/Driver/rewrite-bsc/GenericBSCMethod/rewrite_generic_bscmethod_a/rewrite_generic_bscmethod_a.cbs
// RUN: %clang -rewrite-bsc %S/../rewrite_generic_bscmethod.hbs -o %T/../rewrite_generic_bscmethod.h
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang -rewrite-bsc %S/../rewrite_generic_bscmethod_b/*.cbs -o %t-rw1.c
// RUN: %clang %t-rw.c %t-rw1.c -o %t-rw.output
// RUN: %t-rw.output

#include "../rewrite_generic_bscmethod.hbs"
int main() {
  int res = struct MyStruct<int>::foo();
  return res -1;  
}